# turtlebot3-autonomous-wildlife-sim-AIRANI

./: .gitignore  README.md
gazebo_plugins/move_linear_plugin/: CMakeLists.txt  move_linear_plugin.cpp
move_box_plugin/: CMakeLists.txt  package.xml
move_box_plugin/src/: move_box_plugin.cpp
src/: tree.txt
src/flask_simulation/: MANIFEST.in  package.xml  setup.cfg  setup.py
src/flask_simulation/flask_simulation/: flask_app.py  state.json
src/flask_simulation/flask_simulation/templates/: index.html
src/turtlebot3_autorace/turtlebot3_autorace_detect/: setup.py
src/turtlebot3_autorace/turtlebot3_autorace_detect/launch/: detect_sign.launch.py  detect_traffic_light.launch.py
src/turtlebot3_autorace/turtlebot3_autorace_detect/turtlebot3_autorace_detect/: detect_lane.py  detect_person.py  detect_schoolzone_sign.py  detect_speedbump_sign.py  detect_traffic_light.py  detect_vehicle.py  traffic_light_controller.py
src/turtlebot3_autorace/turtlebot3_autorace_mission/launch/: control_lane.launch.py
src/turtlebot3_autorace/turtlebot3_autorace_mission/turtlebot3_autorace_mission/: control_lane.py
src/turtlebot3_simulations/turtlebot3_gazebo/models/moving_box/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/moving_box/materials/scripts/: moving_box.material
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_autorace_2020/limit_end/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_autorace_2020/limit_end/materials/scripts/: limit_end.material
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_autorace_2020/sharp_curve/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_autorace_2020/sharp_curve/materials/scripts/: sharp_curve.material
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_autorace_2020/speed_bump/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_autorace_2020/speed_bump/materials/scripts/: speed_bump.material
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_autorace_2020/speed_bump_sign/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_autorace_2020/speed_bump_sign/materials/scripts/: speed_bump_sign.material
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_autorace_2020/speed_limit_30/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_autorace_2020/speed_limit_30/materials/scripts/: speed_limit_30.material
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_autorace_2020/sudden_gorani/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: turtlebot3_autorace_2020.world
(+1 files in other folders)
