<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flask_simulation</name>
  <version>0.0.1</version>
  <description>Flask + ROS2 integrated image streaming &amp; control interface</description>
  <maintainer email="park@todo.todo">park</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 외부 Python 라이브러리 (명시만 해줌, pip 설치는 별도) -->
  <exec_depend>flask</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
